--- a/impressum.html
+++ b/impressum.html
@@ -1,13 +1,13 @@
 <h1>Impressum</h1>
 <p>Gabor Botzheim<br/>
-Heinrich-Wieland-Str 195<br/>
-81735 M&#252;nchen<br/>
+Martin-Opitz-Str 22<br/>
+13357 Berlin<br/>
 Tel: +49 151 54275006<br/>
 <a href="mailto:gabor@botzheim.de">gabor@botzheim.de</a>
 </p>
 <p><strong>Umsatzsteuer-ID:</strong><br/>
 Umsatzsteuer-Identifikationsnummer nach §27a Umsatzsteuergesetz:<br/>
-2342342342</p>
+DE361374897</p>
 <p>&nbsp;</p><p><strong>Bildrechte:</strong><br/>
 <br/><a target="_blank" href="http://www.unspash.com">www.unspash.com</a><br/>
 austin-neill<br/>
